<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appBackgroundColor"
        android:orientation="vertical"
        android:padding="10sp">

        <EditText
            android:id="@+id/addClothesDialogNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/addClothesDialogTypeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/type" />

        <EditText
            android:id="@+id/addClothesDialogColorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/color" />

        <EditText
            android:id="@+id/addClothesDialogPatternEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/pattern" />

        <EditText
            android:id="@+id/addClothesDialogPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/price"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/addClothesDialogDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center"
            android:text="@string/defaultDate"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/addClothesDialogImageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:gravity="center"
            android:text="@string/defaultImage"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/addClothesDialogImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginVertical="15sp"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/addClothesDialogCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/addClothesDialogSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>