<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/app_background"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/drawerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="10sp"
        app:cardElevation="10sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:text="@string/menuTitle1"
                android:textSize="26sp"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10sp"
                android:src="@drawable/drawers" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/closetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="10sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:text="@string/menuTitle2"
                android:textSize="26sp"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10sp"
                android:src="@drawable/dressing_room" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/activitiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardCornerRadius="10sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:text="@string/menuTitle3"
                android:textSize="26sp"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10sp"
                android:src="@drawable/social" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>